// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Client: Represents a client owning dogs that require walking.
Dog: Represents a dog belonging to a client.
DogWalker: Represents a dog walker employed by the business.
Feedback: Represents feedback from a client about a walk.
Walk: Represents a scheduled dog walking session.
Payment: Represents a payment made by a client for dog walking services.
WalkLocation: Represents a location where a dog walk can take place.
WalkSchedule: Represents an association between a walk and a dog.
'''
}

Table Client {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    phone_number VARCHAR 
    email VARCHAR 
    address VARCHAR 
    }

Table Dog {
    id INTEGER [primary key]
    name VARCHAR 
    breed VARCHAR 
    age INTEGER 
    client_id INTEGER 
    }

Table DogWalker {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    phone_number VARCHAR 
    email VARCHAR 
    hourly_rate FLOAT 
    }

Table Feedback {
    id INTEGER [primary key]
    client_id INTEGER 
    walk_id INTEGER 
    rating INTEGER 
    comments VARCHAR 
    }

Table Walk {
    id INTEGER [primary key]
    date DATETIME 
    duration INTEGER 
    dog_walker_id INTEGER 
    completed BOOLEAN 
    }

Table Payment {
    id INTEGER [primary key]
    client_id INTEGER 
    amount FLOAT 
    date DATETIME 
    }

Table WalkLocation {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    }

Table WalkSchedule {
    id INTEGER [primary key]
    walk_id INTEGER 
    dog_id INTEGER 
    }



// Relationships
    Ref: Dog.(client_id) < Client.(id)
    Ref: Feedback.(client_id) < Client.(id)
    Ref: Feedback.(walk_id) < Walk.(id)
    Ref: Walk.(dog_walker_id) < DogWalker.(id)
    Ref: Payment.(client_id) < Client.(id)
    Ref: WalkSchedule.(dog_id) < Dog.(id)
    Ref: WalkSchedule.(walk_id) < Walk.(id)
